src/test/test-models/bad/err-double-dims.stan
transformed data {
  real y[2.3];
}
model {
}
